@@ -8,11 +8,9 @@ import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 
-import com.palmergames.bukkit.towny.NotRegisteredException;
 import com.palmergames.bukkit.towny.Towny;
+import com.palmergames.bukkit.towny.TownyChat;
 import com.palmergames.bukkit.towny.TownySettings;
-import com.palmergames.bukkit.towny.object.Nation;
-import com.palmergames.bukkit.towny.object.Resident;
 import com.palmergames.bukkit.util.ChatTools;
 import com.palmergames.bukkit.util.Colors;
 import com.palmergames.util.StringMgmt;
@@ -51,13 +49,13 @@ public class NationChatCommand implements CommandExecutor  {
 			Player player = (Player)sender;
 			
 			// Setup the chat prefix BEFORE we speak.
-			plugin.setDisplayName(player);
+			TownyChat.setDisplayName(plugin, player);
 			
 			if (args == null){
 				for (String line : output)
 					player.sendMessage(line);
 			} else{
-				parseNationChatCommand(player, StringMgmt.join(args, " "));
+				TownyChat.parseNationChatCommand(plugin, player, StringMgmt.join(args, " "));
 			}
 
 		} else
@@ -65,22 +63,6 @@ public class NationChatCommand implements CommandExecutor  {
 			for (String line : output)
 				sender.sendMessage(Colors.strip(line));
 		return true;
-	}
-	
-	public void parseNationChatCommand(Player player, String msg) {
-		try {
-			Resident resident = plugin.getTownyUniverse().getResident(player.getName());
-			Nation nation = resident.getTown().getNation();
-			
-			//String prefix = TownySettings.getModifyChatFormat().contains("{nation}") ? "" : "[" + nation.getName() + "] ";
-			String line = Colors.Gold + "[NC] " // + prefix
-					+ resident.getChatFormattedName()
-					+ Colors.White + ": "
-					+ Colors.Yellow + msg;
-			plugin.getTownyUniverse().sendNationMessage(nation, ChatTools.color(line));
-		} catch (NotRegisteredException x) {
-			plugin.sendErrorMsg(player, x.getError());
-		}
 	}
 
 }
