@@ -9,11 +9,13 @@ import com.palmergames.bukkit.towny.TownyFormatter;
 
 public abstract class TownyObject extends Observable {
 	private String name;
+	private boolean isChangedName = true;
 
 	public void setName(String name) {
         setChanged();
         notifyObservers(TownyObservableType.OBJECT_NAME);
 		this.name = name;
+		setChangedName(true);
 	}
 
 	public String getName() {
@@ -44,5 +46,19 @@ public abstract class TownyObject extends Observable {
 	
 	public String getFormattedName() {
 		return TownyFormatter.getFormattedName(this);
+	}
+	
+	/**
+	 * @return the isChangedName
+	 */
+	public boolean isChangedName() {
+		return isChangedName;
+	}
+
+	/**
+	 * @param isChangedName the isChangedName to set
+	 */
+	public void setChangedName(boolean isChangedName) {
+		this.isChangedName = isChangedName;
 	}
 }
