@@ -52,6 +52,7 @@ import com.palmergames.bukkit.towny.EmptyTownException;
 import com.palmergames.bukkit.towny.EconomyException;
 import com.palmergames.bukkit.towny.NotRegisteredException;
 import com.palmergames.bukkit.towny.Towny;
+import com.palmergames.bukkit.towny.TownyChat;
 import com.palmergames.bukkit.towny.TownyException;
 import com.palmergames.bukkit.towny.TownyFormatter;
 import com.palmergames.bukkit.towny.TownySettings;
@@ -246,7 +247,7 @@ public class TownyUniverse extends TownyObject {
                         getWarEvent().sendScores(player, 3);
                 
                 // Setup the chat prefix/suffix
-                plugin.setDisplayName(player);
+                TownyChat.setDisplayName(plugin, player);
         setChanged();
         notifyObservers(PLAYER_LOGIN);
         }
